@@ -9,7 +9,6 @@
 	· Fix minecart sound.
 	· Fix death animation not being played in minecart.
 	· Fix not dying in minecart properly.
-	· Fix zipline being stuck for some reason.
 	· Because all objects need 1 animation with at least 1 frame to be properly rendered we may tweak that at some point but for now we will just load the object because it will be used for meshswap.
 	
 - Ideas.
