@@ -168,7 +168,7 @@ int __stdcall WinMain(HINSTANCE instance, HINSTANCE prev_instance, char* _cmd_li
 	g_level->register_entity_type(ENTITY_LEVEL_TYPE_AI, TRIBEAXE, DOG, SMALL_RAT, WHALE, DIVER, CROW, TIGER, VULTURE, LIZARD_MAN,
 								  TONY, TRIBEBOSS, LON_BOSS, WILLARD_BOSS, STHPAC_MERCENARY, OILRED, WHITE_SOLDIER, HUSKIE, BURNT_MUTANT, MUTANT1, MUTANT2, MUTANT3,
 								  LON_MERCENARY1, LON_MERCENARY2, PUNK1, PUNK2, SECURITY_GUARD, MP1, MP2, BOB, SWAT_GUN, CIVVIE, COBRA,
-								  SHIVA, MONKEY, TREX, RAPTOR, COMPY, object_types(484));
+								  SHIVA, MONKEY, TREX, RAPTOR, COMPY);
 
 	g_level->register_entity_type(ENTITY_LEVEL_TYPE_INTERACTIVE, SMALL_SWITCH, AIRLOCK_SWITCH, PUSH_SWITCH, SWITCH_TYPE1, SWITCH_TYPE2,
 								  KEY_HOLE1, KEY_HOLE2, KEY_HOLE3, KEY_HOLE4, PUZZLE_HOLE1, PUZZLE_HOLE2, PUZZLE_HOLE3, PUZZLE_HOLE4,
@@ -177,7 +177,7 @@ int __stdcall WinMain(HINSTANCE instance, HINSTANCE prev_instance, char* _cmd_li
 	g_level->register_entity_type(ENTITY_LEVEL_TYPE_DOOR, DOOR_TYPE1, DOOR_TYPE2, DOOR_TYPE3, DOOR_TYPE4, DOOR_TYPE5, DOOR_TYPE6, DOOR_TYPE7, DOOR_TYPE8,
 								  DOOR_TYPE9, TRAPDOOR, TRAPDOOR2);
 	
-	g_level->register_entity_type(ENTITY_LEVEL_TYPE_TRAP, MINI_COPTER, DEATH_SLIDE, SPIKE_WALL, CEILING_SPIKES, HOOK, SAW, FAN,
+	g_level->register_entity_type(ENTITY_LEVEL_TYPE_TRAP, MINI_COPTER, SPIKE_WALL, CEILING_SPIKES, HOOK, SAW, FAN,
 								  SMALL_FAN, SPINNING_BLADE, ICICLES, BLADE, SPRING_BOARD, FALLING_BLOCK, FALLING_BLOCK2, FALLING_PLANK,
 								  PENDULUM, TEETH_TRAP, AVALANCHE, OILDRUMS, ROLLING_BALL, BIG_ROLLING_BALL, SPIKES, FALLING_CEILING1,
 								  FLAME_EMITTER, FLAME_EMITTER2, FLAME_EMITTER3, SIDE_FLAME_EMITTER);
