@@ -189,6 +189,7 @@
 	- Fixed issue when loading animations from tr45 resource.
 	- Fixed crash when entering the assault course.
 	- Fixed vehicles not being able to be entered if someone dies inside it.
+	- Fixed zipline being stuck due to sync, the sync for zipline is removed, it doesn't make much sense to sync it anyways.
 	- Added new client and server scripting functions: unloadAnimation, isItemIntelligent, setItemIntelligent, getItemAI, g/setAIEnemy.
 	
 	
